rhacs-policies/01-unauthorized-process-execution.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: unauthorized-process-execution
  namespace: stackrox
spec:
  policyName: "[GitOps] Unauthorized Process Execution"
  severity: HIGH_SEVERITY
  disabled: false

  lifecycleStages:
    - RUNTIME
  eventSource: DEPLOYMENT_EVENT

  categories:
    - Process Activity

  process:
    - name: "sh"
    - name: "bash"
    - name: "zsh"
    - name: "dash"
