rhacs-policies/05-remote-file-copy-binary-execution.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: remote-file-copy-binary-execution
  namespace: stackrox
spec:
  policyName: "Remote File Copy Binary Execution (GitOps)"
  severity: HIGH_SEVERITY
  disabled: false

  lifecycleStages:
    - RUNTIME
  eventSource: DEPLOYMENT_EVENT

  categories:
    - Data Exfiltration

  process:
    - name: "scp"
    - name: "sftp"
    - name: "rsync"
    - name: "curl"
    - name: "wget"
