rhacs-policies/06-k8s-exec-into-pod.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: k8s-actions-exec-into-pod
  namespace: stackrox
spec:
  policyName: "Kubernetes Actions: Exec into Pod (GitOps)"
  severity: HIGH_SEVERITY
  disabled: false

  lifecycleStages:
    - RUNTIME
  eventSource: DEPLOYMENT_EVENT

  categories:
    - Kubernetes Events

  process:
    - name: "sh"
    - name: "bash"
